--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>xyz.ioc</groupId>
-	<artifactId>blrr</artifactId>
+	<artifactId>blrrr</artifactId>
 	<packaging>jar</packaging>
 	<version>0.1-SNAPSHOT</version>
-	<name>blrr</name>
+	<name>blrrr</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<junit.version>3.8.1</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <slf4j.version>1.7.25</slf4j.version>>
+        <slf4j.version>1.7.25</slf4j.version>
 		<sitemesh.version>2.4.2</sitemesh.version>
 		<commons.io.version>2.4</commons.io.version>
 		<commons.fileupload.version>1.3.3</commons.fileupload.version>
@@ -89,7 +89,7 @@
                     <configuration>
                 <archive>
                     <manifest>
-                        <mainClass>org.athens.Application</mainClass>
+                        <mainClass>xyz.ioc.Application</mainClass>
                     </manifest>
                 </archive>
                 <descriptorRefs>
@@ -116,7 +116,7 @@
                     <index>true</index>
                     <manifest>
                         <addClasspath>true</addClasspath>
-                        <mainClass>xyz.ioc.ApplicationSumAverages</mainClass>
+                        <mainClass>xyz.ioc.Application</mainClass>
                     </manifest>
                   </archive>
                 </configuration>
